Crash adding new curve #55170

Closed
opened 2018-05-23 18:41:55 +02:00 by Dalai Felinto · 6 comments

Blender Version
Broken: 84c3b175f6 (blender2.8 HEAD)
Worked: 2.79

Short description of error
Crash after creating a curve.

Exact steps for others to reproduce the error

  • Add a new Curve
  • Add another object (e.g., a Cube, just to force some refresh)

SUMMARY: AddressSanitizer: SEGV //source/blender/draw/intern/draw_cache_impl_displist.c:84 in curve_render_surface_tri_len_get

Full backtrace: P702

**Blender Version** Broken: 84c3b175f6 (blender2.8 HEAD) Worked: 2.79 **Short description of error** Crash after creating a curve. **Exact steps for others to reproduce the error** * Add a new Curve * Add another object (e.g., a Cube, just to force some refresh) `SUMMARY: AddressSanitizer: SEGV //source/blender/draw/intern/draw_cache_impl_displist.c:84 in curve_render_surface_tri_len_get` Full backtrace: [P702](https://archive.blender.org/developer/P702.txt)
Author
Owner

Added subscribers: @dfelinto, @mano-wii

Added subscribers: @dfelinto, @mano-wii
Author
Owner

@mano-wii can you look at this?

@mano-wii can you look at this?
Author
Owner

I believe this is related to #55167.

You can get the crash much sooner if you apply: P703

I believe this is related to #55167. You can get the crash much sooner if you apply: [P703](https://archive.blender.org/developer/P703.txt)

It is related to copy_on_write.
Currently the curve_cache is freed when deg_update_copy_on_write_datablock is called.
One solution would be to recalculate the curve_cache (should we call the DEG_id_tag_update somewhere?).
A more urgent solution would be to prevent curve_cache from being freed: P629

It is related to `copy_on_write`. Currently the `curve_cache` is freed when `deg_update_copy_on_write_datablock` is called. One solution would be to recalculate the `curve_cache` (should we call the `DEG_id_tag_update` somewhere?). A more urgent solution would be to prevent curve_cache from being freed: [P629](https://archive.blender.org/developer/P629.txt)

This issue was referenced by 70a3b7e70c

This issue was referenced by 70a3b7e70ce145266b37d90f31d3f8e3faf50717
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55170
No description provided.