Fix T55170 and T55167: Crash adding new curve

We do the same solution as we have for mesh_evaluated.